# loop-learn

./: .gitignore  Cargo.toml  Dockerfile  README.md  run-container.sh
.cargo/: config.toml
src/: inference.rs  loader.rs  main.rs  presets.rs  storage.rs
storage/: knowledge.txt
