[package]
name = "loop-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
candle-transformers = { version = "0.8.2", features = ["cuda"] }
hf-hub = "0.4.0"
anyhow = "1.0"
tokenizers = "0.21"
serde_json = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
