[package]
name = "loop-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["cuda"] }
hf-hub = "0.4.0"
anyhow = "1.0"
tokenizers = "0.21"
serde_json = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"