[package]
name = "loop-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["cuda"] }
hf-hub = "0.4.0"
anyhow = "1.0"
tokenizers = "0.21"
serde_json = "1.0"
memmap2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
candle-core = { version = "0.8.4", features = ["cuda"] }
candle-nn = { version = "0.8.4", features = ["cuda"] }
candle-transformers = { version = "0.8.4" }
rustyline = "14.0.0"
encoding_rs = "0.8"